// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`fun-call-expression if_func ast: ast 1`] = `
Object {
  "args": Array [
    Object {
      "innerComments": Array [],
      "leadingComments": Array [],
      "loc": Object {
        "end": Object {
          "column": 6,
          "line": 1,
          "offset": 5,
        },
        "start": Object {
          "column": 4,
          "line": 1,
          "offset": 3,
        },
      },
      "trailingComments": Array [],
      "type": "StringLiteral",
      "value": "\\"a\\"",
    },
    Object {
      "innerComments": Array [],
      "leadingComments": Array [],
      "loc": Object {
        "end": Object {
          "column": 11,
          "line": 1,
          "offset": 10,
        },
        "start": Object {
          "column": 9,
          "line": 1,
          "offset": 8,
        },
      },
      "trailingComments": Array [],
      "type": "StringLiteral",
      "value": "\\"b\\"",
    },
    Object {
      "innerComments": Array [],
      "leadingComments": Array [],
      "loc": Object {
        "end": Object {
          "column": 16,
          "line": 1,
          "offset": 15,
        },
        "start": Object {
          "column": 14,
          "line": 1,
          "offset": 13,
        },
      },
      "trailingComments": Array [],
      "type": "StringLiteral",
      "value": "\\"c\\"",
    },
  ],
  "callee": Object {
    "innerComments": Array [],
    "leadingComments": Array [],
    "loc": Object {
      "end": Object {
        "column": 2,
        "line": 1,
        "offset": 1,
      },
      "start": Object {
        "column": 1,
        "line": 1,
        "offset": 0,
      },
    },
    "name": "if",
    "trailingComments": Array [],
    "type": "Identifier",
  },
  "innerComments": Array [],
  "leadingComments": Array [],
  "loc": Object {
    "end": Object {
      "column": 17,
      "line": 1,
      "offset": 16,
    },
    "start": Object {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "trailingComments": Array [],
  "type": "FunCallExpression",
}
`;

exports[`fun-call-expression if_func format: format long 1`] = `if("a", "b", "c")`;

exports[`fun-call-expression if_func format: format short 1`] = `
if(
  "a",
  "b",
  "c",
)
`;

exports[`fun-call-expression if_func token 1`] = `
Array [
  if,
  (,
  "a",
  ,,
  "b",
  ,,
  "c",
  ),
]
`;

exports[`fun-call-expression member_callee ast: ast 1`] = `
Object {
  "args": Array [
    Object {
      "innerComments": Array [],
      "leadingComments": Array [],
      "loc": Object {
        "end": Object {
          "column": 14,
          "line": 1,
          "offset": 13,
        },
        "start": Object {
          "column": 11,
          "line": 1,
          "offset": 10,
        },
      },
      "name": "some",
      "trailingComments": Array [],
      "type": "Identifier",
    },
    Object {
      "innerComments": Array [],
      "leadingComments": Array [],
      "loc": Object {
        "end": Object {
          "column": 20,
          "line": 1,
          "offset": 19,
        },
        "start": Object {
          "column": 17,
          "line": 1,
          "offset": 16,
        },
      },
      "name": "args",
      "trailingComments": Array [],
      "type": "Identifier",
    },
  ],
  "callee": Object {
    "base": Object {
      "innerComments": Array [],
      "leadingComments": Array [],
      "loc": Object {
        "end": Object {
          "column": 4,
          "line": 1,
          "offset": 3,
        },
        "start": Object {
          "column": 1,
          "line": 1,
          "offset": 0,
        },
      },
      "name": "some",
      "trailingComments": Array [],
      "type": "Identifier",
    },
    "innerComments": Array [],
    "leadingComments": Array [],
    "loc": Object {
      "end": Object {
        "column": 9,
        "line": 1,
        "offset": 8,
      },
      "start": Object {
        "column": 1,
        "line": 1,
        "offset": 0,
      },
    },
    "member": Object {
      "innerComments": Array [],
      "leadingComments": Array [],
      "loc": Object {
        "end": Object {
          "column": 9,
          "line": 1,
          "offset": 8,
        },
        "start": Object {
          "column": 6,
          "line": 1,
          "offset": 5,
        },
      },
      "name": "func",
      "trailingComments": Array [],
      "type": "Identifier",
    },
    "trailingComments": Array [],
    "type": "Member",
  },
  "innerComments": Array [],
  "leadingComments": Array [],
  "loc": Object {
    "end": Object {
      "column": 21,
      "line": 1,
      "offset": 20,
    },
    "start": Object {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "trailingComments": Array [],
  "type": "FunCallExpression",
}
`;

exports[`fun-call-expression member_callee format: format long 1`] = `some.func(some, args)`;

exports[`fun-call-expression member_callee format: format short 1`] = `
some.func(
  some,
  args,
)
`;

exports[`fun-call-expression member_callee token 1`] = `
Array [
  some,
  .,
  func,
  (,
  some,
  ,,
  args,
  ),
  ;,
]
`;

exports[`fun-call-expression trailing_comma_in_args ast: ast 1`] = `
Object {
  "args": Array [
    Object {
      "innerComments": Array [],
      "leadingComments": Array [],
      "loc": Object {
        "end": Object {
          "column": 8,
          "line": 1,
          "offset": 7,
        },
        "start": Object {
          "column": 6,
          "line": 1,
          "offset": 5,
        },
      },
      "trailingComments": Array [],
      "type": "StringLiteral",
      "value": "\\"a\\"",
    },
  ],
  "callee": Object {
    "innerComments": Array [],
    "leadingComments": Array [],
    "loc": Object {
      "end": Object {
        "column": 4,
        "line": 1,
        "offset": 3,
      },
      "start": Object {
        "column": 1,
        "line": 1,
        "offset": 0,
      },
    },
    "name": "func",
    "trailingComments": Array [],
    "type": "Identifier",
  },
  "innerComments": Array [],
  "leadingComments": Array [],
  "loc": Object {
    "end": Object {
      "column": 10,
      "line": 1,
      "offset": 9,
    },
    "start": Object {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "trailingComments": Array [],
  "type": "FunCallExpression",
}
`;

exports[`fun-call-expression trailing_comma_in_args format: format long 1`] = `func("a")`;

exports[`fun-call-expression trailing_comma_in_args format: format short 1`] = `
func(
  "a",
)
`;

exports[`fun-call-expression trailing_comma_in_args token 1`] = `
Array [
  func,
  (,
  "a",
  ,,
  ),
]
`;

exports[`fun-call-expression with_an_arg ast: ast 1`] = `
Object {
  "args": Array [
    Object {
      "innerComments": Array [],
      "leadingComments": Array [],
      "loc": Object {
        "end": Object {
          "column": 8,
          "line": 1,
          "offset": 7,
        },
        "start": Object {
          "column": 6,
          "line": 1,
          "offset": 5,
        },
      },
      "trailingComments": Array [],
      "type": "StringLiteral",
      "value": "\\"a\\"",
    },
  ],
  "callee": Object {
    "innerComments": Array [],
    "leadingComments": Array [],
    "loc": Object {
      "end": Object {
        "column": 4,
        "line": 1,
        "offset": 3,
      },
      "start": Object {
        "column": 1,
        "line": 1,
        "offset": 0,
      },
    },
    "name": "func",
    "trailingComments": Array [],
    "type": "Identifier",
  },
  "innerComments": Array [],
  "leadingComments": Array [],
  "loc": Object {
    "end": Object {
      "column": 9,
      "line": 1,
      "offset": 8,
    },
    "start": Object {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "trailingComments": Array [],
  "type": "FunCallExpression",
}
`;

exports[`fun-call-expression with_an_arg format: format long 1`] = `func("a")`;

exports[`fun-call-expression with_an_arg format: format short 1`] = `
func(
  "a",
)
`;

exports[`fun-call-expression with_an_arg token 1`] = `
Array [
  func,
  (,
  "a",
  ),
]
`;

exports[`fun-call-expression with_multi_args ast: ast 1`] = `
Object {
  "args": Array [
    Object {
      "innerComments": Array [],
      "leadingComments": Array [],
      "loc": Object {
        "end": Object {
          "column": 8,
          "line": 1,
          "offset": 7,
        },
        "start": Object {
          "column": 6,
          "line": 1,
          "offset": 5,
        },
      },
      "trailingComments": Array [],
      "type": "StringLiteral",
      "value": "\\"a\\"",
    },
    Object {
      "innerComments": Array [],
      "leadingComments": Array [],
      "loc": Object {
        "end": Object {
          "column": 13,
          "line": 1,
          "offset": 12,
        },
        "start": Object {
          "column": 11,
          "line": 1,
          "offset": 10,
        },
      },
      "trailingComments": Array [],
      "type": "StringLiteral",
      "value": "\\"b\\"",
    },
  ],
  "callee": Object {
    "innerComments": Array [],
    "leadingComments": Array [],
    "loc": Object {
      "end": Object {
        "column": 4,
        "line": 1,
        "offset": 3,
      },
      "start": Object {
        "column": 1,
        "line": 1,
        "offset": 0,
      },
    },
    "name": "func",
    "trailingComments": Array [],
    "type": "Identifier",
  },
  "innerComments": Array [],
  "leadingComments": Array [],
  "loc": Object {
    "end": Object {
      "column": 14,
      "line": 1,
      "offset": 13,
    },
    "start": Object {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "trailingComments": Array [],
  "type": "FunCallExpression",
}
`;

exports[`fun-call-expression with_multi_args format: format long 1`] = `func("a", "b")`;

exports[`fun-call-expression with_multi_args format: format short 1`] = `
func(
  "a",
  "b",
)
`;

exports[`fun-call-expression with_multi_args token 1`] = `
Array [
  func,
  (,
  "a",
  ,,
  "b",
  ),
]
`;

exports[`fun-call-expression with_whitespaces ast: ast 1`] = `
Object {
  "args": Array [
    Object {
      "innerComments": Array [],
      "leadingComments": Array [],
      "loc": Object {
        "end": Object {
          "column": 10,
          "line": 1,
          "offset": 9,
        },
        "start": Object {
          "column": 8,
          "line": 1,
          "offset": 7,
        },
      },
      "trailingComments": Array [],
      "type": "StringLiteral",
      "value": "\\"a\\"",
    },
  ],
  "callee": Object {
    "innerComments": Array [],
    "leadingComments": Array [],
    "loc": Object {
      "end": Object {
        "column": 4,
        "line": 1,
        "offset": 3,
      },
      "start": Object {
        "column": 1,
        "line": 1,
        "offset": 0,
      },
    },
    "name": "func",
    "trailingComments": Array [],
    "type": "Identifier",
  },
  "innerComments": Array [],
  "leadingComments": Array [],
  "loc": Object {
    "end": Object {
      "column": 11,
      "line": 1,
      "offset": 10,
    },
    "start": Object {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "trailingComments": Array [],
  "type": "FunCallExpression",
}
`;

exports[`fun-call-expression with_whitespaces format: format long 1`] = `func("a")`;

exports[`fun-call-expression with_whitespaces format: format short 1`] = `
func(
  "a",
)
`;

exports[`fun-call-expression with_whitespaces token 1`] = `
Array [
  func,
  (,
  "a",
  ),
]
`;

exports[`fun-call-expression witout_arg ast: ast 1`] = `
Object {
  "args": Array [],
  "callee": Object {
    "innerComments": Array [],
    "leadingComments": Array [],
    "loc": Object {
      "end": Object {
        "column": 4,
        "line": 1,
        "offset": 3,
      },
      "start": Object {
        "column": 1,
        "line": 1,
        "offset": 0,
      },
    },
    "name": "func",
    "trailingComments": Array [],
    "type": "Identifier",
  },
  "innerComments": Array [],
  "leadingComments": Array [],
  "loc": Object {
    "end": Object {
      "column": 6,
      "line": 1,
      "offset": 5,
    },
    "start": Object {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "trailingComments": Array [],
  "type": "FunCallExpression",
}
`;

exports[`fun-call-expression witout_arg format: format long 1`] = `func()`;

exports[`fun-call-expression witout_arg format: format short 1`] = `
func(
  ,
)
`;

exports[`fun-call-expression witout_arg token 1`] = `
Array [
  func,
  (,
  ),
  ;,
]
`;
